testdata/baselines/reference/submodule/conformance/parserForStatement2.errors.txt
parserForStatement2.ts(4,11): error TS2322: Type 'undefined[]' is not assignable to type 'undefined'.
parserForStatement2.ts(4,30): error TS2304: Cannot find name 'd'.


==== parserForStatement2.ts (2 errors) ====
    var a;
    var b = [];
    var c;
    for (a in b[c] = b[c] || [], d) {
              ~~~~
!!! error TS2322: Type 'undefined[]' is not assignable to type 'undefined'.
                                 ~
!!! error TS2304: Cannot find name 'd'.
    
    }